# OOD

./: .eslintrc.js  .gitignore  CMakeLists.txt  composer.json  index.html  jest.config.js  package-lock.json  package.json  phpunit.xml  tsconfig.json  tsconfig.test.json
src/Lab1/Duck/: Architecture.md  main.php
src/Lab1/Duck/Entity/: Duck.php  MallardDuck.php  RedHeadDuck.php
src/Lab1/DuckFunctional/: main.php
src/Lab1/DuckFunctional/Entity/: Duck.php  MallardDuck.php  RedHeadDuck.php
src/Lab1/DuckFunctional/Strategy/: DanceBehavior.php  FlyBehavior.php  QuackBehavior.php
src/Lab1/Shapes/: Architecture.md  house  main.php
src/Lab1/Shapes/Common/: Point.php
src/Lab1/Shapes/Controller/: ShapeController.php
src/Lab1/Shapes/Entity/: CanvasInterface.php  Picture.php  Shape.php
src/Lab1/Shapes/Exception/: InvalidHexColorException.php  ShapeAlreadyExistsException.php  ShapeNotFoundException.php  UndefinedFigureException.php
src/Lab1/Shapes/Infrastructure/: Canvas.php
src/Lab1/Shapes/Strategy/: EllipseStrategy.php  LineStrategy.php  RectangleStrategy.php  ShapeStrategyInterface.php  TextStrategy.php  TriangleStrategy.php
src/Lab10/Slide/: App.tsx  AppPresenter.ts  Architecture.md  main.tsx
src/Lab10/Slide/Common/: Common.ts  ObserverInterface.ts
src/Lab10/Slide/style/: App.module.css
src/Lab2/WeatherStation/: Architecture.md  CMakeLists.txt  WeatherInfoPro.h  main.cpp  mainPro.cpp
src/Lab2/WeatherStation/Data/: ProStatistics.cpp  ProStatistics.h  Statistics.cpp  Statistics.h  WeatherEvent.h  WeatherInfo.h
src/Lab2/WeatherStation/Observable/: Observable.h  ObservableInterface.h  WeatherData.cpp  WeatherData.h  WeatherDataPro.cpp  WeatherDataPro.h
src/Lab2/WeatherStation/Observer/: Display.cpp  Display.h  ObserverInterface.h  StatsDisplay.cpp  StatsDisplay.h  WeatherDisplay.h
src/Lab3/Beverage/: Architecture.md  CMakeLists.txt  includes.h  main.cpp
src/Lab3/Beverage/Model/: BeverageInterface.h
src/Lab3/Stream/: Architecture.md  CMakeLists.txt  main.cpp
src/Lab3/Stream/Cipher/: Cipher.cpp  Cipher.h
src/Lab3/Stream/Factory/: InputDecoratorFactory.h  OutputDecoratorFactory.h
src/Lab3/Stream/Input/: DecompressionDecorator.cpp  DecompressionDecorator.h  DecryptDecorator.cpp  DecryptDecorator.h  FileInputStream.cpp  FileInputStream.h  InputStreamInterface.h
src/Lab3/Stream/Output/: CompressionDecorator.cpp  CompressionDecorator.h  EncryptDecorator.cpp  EncryptDecorator.h  FileOutputStream.cpp  FileOutputStream.h  OutputStreamInterface.h
src/Lab3/Stream/Validator/: StreamValidator.h
src/Lab4/Factory/: Architecture.md  main.php  scetch
src/Lab5/Editor/: Architecture.md  main.php
src/Lab6/: CMakeLists.txt  GraphicsLib.h  ModernGraphicsLib.h  ShapeDrawingLib.h  main.cpp
src/Lab6/ClassAdapter/: Architecture.md  RendererToCanvasAdapter.h
src/Lab6/ObjectAdapter/: Architecture.md  ModernGraphicsLib.h  RendererToCanvasAdapter.h  ShapeDrawingLib.h  main.cpp
src/Lab7/Slide/: Architecture.md  main.php
src/Lab8/GumballMachine/: CMakeLists.txt  main.cpp
src/Lab9/CopyOnWrite/: CMakeLists.txt  Drawer.h  main.cpp
tests/Integration/Stream/: CMakeLists.txt  EncodeDecodeTest.cpp
tests/Unit/Adapter/: CMakeLists.txt  ClassAdapterTest.cpp  ObjectAdapterTest.cpp
tests/Unit/Beverage/: CMakeLists.txt  CreateBeverageTest.cpp
tests/Unit/Duck/: DuckDanceBehaviorTest.php  DuckQuackBehaviorTest.php
tests/Unit/DuckFunctional/: DuckDanceBehaviorTest.php  DuckQuackBehaviorTest.php
tests/Unit/Editor/: DocumentTest.php  HistoryTest.php
tests/Unit/FactoryShape/: DesignerTest.php  DraftTest.php  FactoryTest.php  PainterTest.php  ShapeTest.php
tests/Unit/GumballMachine/: CMakeLists.txt  GumballMachineTest.cpp  NaiveGumballMachineTest.cpp
tests/Unit/ImageWithTiles/: CMakeLists.txt  ImageWithTileTest.cpp  TileTest.cpp
tests/Unit/Lab10/: Shapes.test.ts
tests/Unit/ObjectAdapter/: CMakeLists.txt  RendererToCanvasAdapterTest.cpp
tests/Unit/Shape/: PictureTest.php  ShapeTest.php
tests/Unit/Slide/: CloneTest.php  ShapeGroupTest.php
tests/Unit/Stream/: CMakeLists.txt  DecodeTest.cpp  EncodeTest.cpp  StreamTest.cpp
tests/Unit/WeatherStation/: CMakeLists.txt  MultyObservableTest.cpp  PriorityObserversTest.cpp
tests/Unit/WeatherStation/Mock/: MockMultyObserver.h  MockObserver.cpp  MockObserver.h  MockPriorityObserver1.cpp  MockPriorityObserver1.h  MockPriorityObserver2.cpp  MockPriorityObserver2.h
(+191 files in other folders)
